gcp-helms/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ml-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - secretName: jiffyaicert
  rules:
  - host: jiffyml-gke.jiffy.ai
    http:
      paths:
      - path: /*
        backend:
          serviceName: ml-nginx
          servicePort: 8765
